--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
     content="Melzinho Vital honey 100% natural e afrodisíaco, o melzinho do amor garante a energia e vitalidade que seu corpo precisa.">
   <meta name="keywords" content="cupom, desconto, super melzinho">
 
-  <link rel="alternate" href="https://super-melzinho.desconto.click" hreflang="pt-br" />
-  <link rel=“canonical” href=“https://super-melzinho.desconto.click” />
+  <link rel="alternate" href="https://super-melzinho.aprovamos.online" hreflang="pt-br" />
+  <link rel=“canonical” href=“https://super-melzinho.aprovamos.online” />
 
 
   <!-- // INICIO SNIPPET PRODUTO // -->
@@ -299,7 +299,7 @@
     "@type": "Product",
     "name": "Super Melzinho",
     "image": [
-      "https://images.desconto.click/super-melzinho.webp"
+      "https://images.aprovamos.online/super-melzinho.webp"
      ],
     "description": "Melzinho Vital honey 100% natural e afrodisíaco, o melzinho do amor garante a energia e vitalidade que seu corpo precisa. Dura entre três e cinco dias, deixando a pessoa preparada e forte para os melhores momentos.
 
@@ -329,7 +329,7 @@
     },
     "offers": {
       "@type": "Offer",
-      "url": "https://super-melzinho.desconto.click/",
+      "url": "https://super-melzinho.aprovamos.online/",
       "priceCurrency": "BRL",
       "price": "99.90",
       "priceValidUntil": "2026-12-25",
@@ -386,7 +386,7 @@
 
     <div class="containerzao">
       <div class="imagem"> <a href="usar-o-cupom.html" alt="OFERTA" title="COMPRE BARATO"><img
-            src="https://images.desconto.click/super-melzinho.webp" alt="Super Melzinho" width="247" height="280"></a></div>
+            src="https://images.aprovamos.online/super-melzinho.webp" alt="Super Melzinho" width="247" height="280"></a></div>
 
       <div class="descricao">
         <p>Melzinho Vital honey 100% natural e afrodisíaco, o melzinho do amor garante a energia e vitalidade que seu corpo precisa. Dura entre três e cinco dias, deixando a pessoa preparada e forte para os melhores momentos.</p>
@@ -808,14 +808,14 @@
 
   <footer class="container-footer">
     <div class="text-rodape">
-      <div class="a"><a href="https://desconto.click/termos.html" class="text-rodape">Termos de Uso</a> | <a
-          href="https://desconto.click/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
-          href="https://desconto.click/" class="text-rodape">Mais Cupons</a>
+      <div class="a"><a href="https://aprovamos.online/termos.html" class="text-rodape">Termos de Uso</a> | <a
+          href="https://aprovamos.online/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
+          href="https://aprovamos.online/" class="text-rodape">Mais Cupons</a>
         </div>
     </div>
     <div class="container-footer">
       <div class="text-rodape">
-        <h4> Desconto.Click © Todos os direitos reservados.</h4>
+        <h4> aprovamos.online © Todos os direitos reservados.</h4>
       </div>
     </div>
   </footer>
